Fix permalink target paragraph being hidden behind the menu bar
Fixes #120

--- a/gramdictru/wwwroot/css/site.css
+++ b/gramdictru/wwwroot/css/site.css
@@ -680,22 +680,10 @@ a.contents-link {
     max-width: calc(100% - var(--body-padding) * 2);
 }
 
-:target::before {
-    content: "";
-    display: inline-block;
-    position: relative;
-    z-index: -1;
-    padding-top: var(--search-bar-total-height);
-    margin-top: calc(0px - var(--search-bar-total-height));
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-}
 
-:target .permalink {
-    margin-left: 0;
-    padding-left: 0;
-    margin-right: 0;
+span.target {
+    position:relative;
+    top:calc(0px - var(--search-bar-total-height));
 }
 
 h1:target .permalink,
